--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 
 <body>
 <h1>Ray Blog</h1>
+My Name is Zhao Weiguang, This is My Blog.
+<img src="http://i1249.photobucket.com/albums/hh519/zhaoguangtou/blog.jpg" />
 </body>
 </html>
