--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<title>Ray Blog</title>
+<title>Zhao Weiguang's' Blog</title>
 </head>
 
 <body>
-<h1>Ray Blog</h1>
-My Name is Zhao Weiguang, This is My Blog.
+<h1>Zhao Weiguang's' Blog</h1>
+My Name is Zhao Weiguang, This is My Blog.<br>
 <img src="http://i1249.photobucket.com/albums/hh519/zhaoguangtou/blog.jpg" />
 </body>
 </html>
