--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<title>Zhao Weiguang's' Blog</title>
+<title>Zhao Weiguang's Blog</title>
 </head>
 
-<body>
+<body align="center">
 <h1>Zhao Weiguang's' Blog</h1>
-My Name is Zhao Weiguang, This is My Blog.<br>
+My Name is Zhao Weiguang, This is My Blog.<br><br>
 <img src="http://i1249.photobucket.com/albums/hh519/zhaoguangtou/blog.jpg" />
 </body>
 </html>
