--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 
 <body align="center">
-<h1>Zhao Weiguang's' Blog</h1>
-My Name is Zhao Weiguang, This is My Blog.<br><br>
+<h1>Zhao Weiguang's Blog</h1>
+My Name is Zhao Weiguang, This is My Blog with Github Pages.It's so awesome!<br><br>
 <img src="http://i1249.photobucket.com/albums/hh519/zhaoguangtou/blog.jpg" />
 </body>
 </html>
