--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body align="center">
 <h1>Zhao Weiguang's Blog</h1>
-My Name is Zhao Weiguang, This is My Blog with Github Pages.It's so awesome!<br><br>
+I'm Zhao Weiguang, This is My Blog with Github Pages.It's so awesome!<br><br>
 <img src="http://i1249.photobucket.com/albums/hh519/zhaoguangtou/blog.jpg" />
 </body>
 </html>
